# actix-todo

./: Cargo.toml  diesel.toml
.devcontainer/: devcontainer.json
actix-todo/: Cargo.toml  diesel.toml
actix-todo/migrations/2022-07-30-211118_create_todos/: up.sql
actix-todo/src/: api.rs  main.rs  utils.rs
actix-todo/src/api/: mod.rs  todo.rs
actix-todo/src/api/model/request/: todo.rs
actix-todo/src/api/model/response/: mod.rs
actix-todo/src/application/: todo.rs
actix-todo/src/config/: consts.rs
actix-todo/src/domain/: mod.rs  todo.rs
actix-todo/src/domain/repository/: interface.rs
actix-todo/src/domain/service/: todo.rs
actix-todo/src/error/: types.rs
actix-todo/src/model/: todo.rs
actix-todo/src/repository/: mod.rs
actix-todo/src/repository/diesel/: connection.rs
actix-todo/src/repository/model/: todo.rs
actix-todo/src/repository/todo/: model.rs  repository.rs
src/: main.rs  repository.rs
src/api/: todo.rs
src/config/: consts.rs
src/consts/: variables.rs
src/error/: types.rs
src/migrations/: 20220730_create_todos_table.sql
src/repository/: connection.rs  todo.rs
src/repository/diesel/: connection.rs  schema.rs
src/repository/todo/: model.rs
